--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,16 @@ services:
     ports:
      - 6379:6379
 
+  rabbitmq:
+    image: augur-rabbitmq
+    build:
+      context: ./docker/rabbitmq/
+    # ports for amqp connections / management api
+    ports:
+    - 5671:5671
+    - 5672:5672
+    - 15671:15671
+    - 15672:15672
 
   augur:
     image: augur-new:latest
@@ -40,9 +50,11 @@ services:
       - "AUGUR_GITHUB_USERNAME=${AUGUR_GITHUB_USERNAME}"
       - "AUGUR_GITLAB_USERNAME=${AUGUR_GITLAB_USERNAME}"
       - REDIS_CONN_STRING=redis://redis:6379
+      - RABBITMQ_CONN_STRING=amqp://augur:password123@rabbitmq:5672/augur_vhost
     depends_on:
       - augur-db
       - redis
+      - rabbitmq
   
 volumes:
   facade:
