added default environment variables
Signed-off-by: Gary White Jr <7660110+GaryPWhite@users.noreply.github.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,13 +22,17 @@ services:
   rabbitmq:
     image: augur-rabbitmq
     build:
-      context: ./docker/rabbitmq/
+      context: .
+      dockerfile: ./docker/rabbitmq/Dockerfile
     # ports for amqp connections / management api
     ports:
-    - 5671:5671
-    - 5672:5672
-    - 15671:15671
-    - 15672:15672
+      - 5671:5671
+      - 5672:5672
+      - 15671:15671
+      - 15672:15672
+    environment:
+      - "RABBIT_MQ_DEFAULT_USER=${AUGUR_RABBITMQ_USERNAME:-augur}"
+      - "RABBIT_MQ_DEFAULT_PASSWORD=${AUGUR_RABBITMQ_PASSWORD:-password123}"
 
   augur:
     image: augur-new:latest
@@ -50,7 +54,7 @@ services:
       - "AUGUR_GITHUB_USERNAME=${AUGUR_GITHUB_USERNAME}"
       - "AUGUR_GITLAB_USERNAME=${AUGUR_GITLAB_USERNAME}"
       - REDIS_CONN_STRING=redis://redis:6379
-      - RABBITMQ_CONN_STRING=amqp://augur:password123@rabbitmq:5672/augur_vhost
+      - RABBITMQ_CONN_STRING=amqp://${AUGUR_RABBITMQ_USERNAME:-augur}:${AUGUR_RABBITMQ_PASSWORD:-password123}@rabbitmq:5672/augur_vhost
     depends_on:
       - augur-db
       - redis
