--- a/.github/workflows/auto_merge.yml
+++ b/.github/workflows/auto_merge.yml
@@ -15,8 +15,14 @@ jobs:
         with:
           fetch-depth: 0
       - run: |
+          git config user.name 'GitHub Actions'
+          git config user.email 'actions@users.noreply.github.com'
           git checkout dev
           git merge main
+          git add -A
+          timestamp=$(date -u)
+          git commit -m "update dev: ${timestamp}"
+          echo "Done with merge"
       - name: Push to dev
         uses: CasperWA/push-protected@v2
         with:
