--- a/docs/source/rest-api/spec.yml
+++ b/docs/source/rest-api/spec.yml
@@ -5275,6 +5275,14 @@ paths:
     get:
       description: 'Returns project line data for all repositories in an Augur instance, using information from a git platform (GitHub, GitLab, etc.). Each record includes the total and average number of lines in the project repository.'
       operationId: Total Lines (repo)
+      parameters:
+        - in: query
+          name: repo_id
+          required: true
+          schema:
+            type: integer
+          type: integer
+          description: Reposity Id
       responses:
         '200':
           description: OK
@@ -5331,6 +5339,14 @@ paths:
     get:
       description: 'Returns project blank line data for all repositories in an Augur instance, using information from a git platform (GitHub, GitLab, etc.). Each record includes the total and average number of blank lines in the project repository.'
       operationId: Total Blank Lines (repo)
+      parameters:
+        - in: query
+          name: repo_id
+          required: true
+          schema:
+            type: integer
+          type: integer
+          description: Reposity Id
       responses:
         '200':
           description: OK
@@ -5359,6 +5375,14 @@ paths:
     get:
       description: 'Returns project comment line data for all repositories in an Augur instance, using information from a git platform (GitHub, GitLab, etc.). Each record includes the total and average number of comment lines in the project repository.'
       operationId: Total Comment Lines (repo)
+      parameters:
+        - in: query
+          name: repo_id
+          required: true
+          schema:
+            type: integer
+          type: integer
+          description: Reposity Id
       responses:
         '200':
           description: OK
