--- a/docs/source/rest-api/spec.yml
+++ b/docs/source/rest-api/spec.yml
@@ -4711,7 +4711,7 @@ paths:
           schema:
             type: integer
           type: integer
-          description: Reposity Id
+          description: Repository Id
         - in: query
           name: start_date
           required: false
@@ -4772,7 +4772,7 @@ paths:
           schema:
             type: integer
           type: integer
-          description: Reposity Id
+          description: Repository Id
         - in: query
           name: start_date
           required: false
@@ -4833,7 +4833,7 @@ paths:
           schema:
             type: integer
           type: integer
-          description: Reposity Id
+          description: Repository Id
         - in: query
           name: start_date
           required: false
@@ -4887,7 +4887,7 @@ paths:
           schema:
             type: integer
           type: integer
-          description: Reposity Id
+          description: Repository Id
         - in: query
           name: start_date
           required: false
@@ -4948,7 +4948,7 @@ paths:
           schema:
             type: integer
           type: integer
-          description: Reposity Id
+          description: Repository Id
         - in: query
           name: start_date
           required: false
@@ -4988,7 +4988,7 @@ paths:
           schema:
             type: integer
           type: integer
-          description: Reposity Id
+          description: Repository Id
         - in: query
           name: start_date
           required: false
@@ -5028,7 +5028,7 @@ paths:
           schema:
             type: integer
           type: integer
-          description: Reposity Id
+          description: Repository Id
         - in: query
           name: start_date
           required: false
@@ -5068,7 +5068,7 @@ paths:
           schema:
             type: integer
           type: integer
-          description: Reposity Id
+          description: Repository Id
         - in: query
           name: start_date
           required: false
@@ -5108,7 +5108,7 @@ paths:
           schema:
             type: integer
           type: integer
-          description: Reposity Id
+          description: Repository Id
         - in: query
           name: start_date
           required: false
@@ -5148,7 +5148,7 @@ paths:
           schema:
             type: integer
           type: integer
-          description: Reposity Id
+          description: Repository Id
         - in: query
           name: start_date
           required: false
@@ -5195,7 +5195,7 @@ paths:
           schema:
             type: integer
           type: integer
-          description: Reposity Id
+          description: Repository Id
         - in: query
           name: start_date
           required: false
@@ -5235,7 +5235,7 @@ paths:
           schema:
             type: integer
           type: integer
-          description: Reposity Id
+          description: Repository Id
         - in: query
           name: start_date
           required: false
@@ -5282,7 +5282,7 @@ paths:
           schema:
             type: integer
           type: integer
-          description: Reposity Id
+          description: Repository Id
       responses:
         '200':
           description: OK
@@ -5346,7 +5346,7 @@ paths:
           schema:
             type: integer
           type: integer
-          description: Reposity Id
+          description: Repository Id
       responses:
         '200':
           description: OK
@@ -5382,7 +5382,7 @@ paths:
           schema:
             type: integer
           type: integer
-          description: Reposity Id
+          description: Repository Id
       responses:
         '200':
           description: OK
