--- a/docker/backend/Dockerfile
+++ b/docker/backend/Dockerfile
@@ -1,5 +1,5 @@
 #SPDX-License-Identifier: MIT
-FROM python:3.10-slim-bullseye
+FROM python:3.10-bookworm
 
 LABEL maintainer="outdoors@acm.org"
 LABEL version="0.62.6"
@@ -13,6 +13,8 @@ RUN set -x \
         bash \
         curl \
         gcc \
+        software-properties-common \
+        postgresql-contrib \
         musl-dev \
         python3-dev \
         python3-distutils \
