updates to docker testing
Signed-off-by: Sean P. Goggins <s@goggins.com>

--- a/.github/workflows/build_docker.yml
+++ b/.github/workflows/build_docker.yml
@@ -23,7 +23,7 @@ jobs:
     name: Build image
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout startup-wizard
+      - name: Checkout main
         uses: actions/checkout@v2
       - name: Run the build
         run: |
